# shuati-Cli

./: .gitignore  .pre-commit-config.yaml  3_蓝桥云课_1.cpp  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  CODE_REVIEW_ANALYSIS.md  CONTRIBUTING.md  Dockerfile.crawler  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v0.0.1.md  build_diag.txt  build_err.txt  build_error.txt  build_log.txt  cmake_log.txt  cmake_out.txt  commit_msg.txt  debug_log.txt  install.ps1  install.sh  local_1770706143.md  prd.md  solution_local_1770706143.cpp  solution_local_1771263455.cpp  test_simple.bat  test_simple_crawlers.py  tui-benchmark-report.txt  update.md  upgrade_plan_v0.1.0_TUI.md  vcpkg.json
.claude/: settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  ci.yml  crawler-image.yml  crawler_ci.yml  prepare-release.yml  release.yml  rollback-release.yml  workflow-tests.yml
.trae/documents/: fix_ci_failures.md
build-ninja/: CMakeCache.txt
build_validation/: CMakeCache.txt
docs/reports/: branch_health_report.md  crawler_review_report.md
include/: ai_coach.hpp  config.hpp  database.hpp  mistake_analyzer.hpp  problem_manager.hpp  sm2_algorithm.hpp
include/shuati/: ai_coach.hpp  boot_guard.hpp  compiler_doctor.hpp  config.hpp  crawler.hpp  crawlers.hpp  database.hpp  http_client.hpp  judge.hpp  logger.hpp  memory_manager.hpp  mistake_analyzer.hpp  problem_manager.hpp  resource_path.hpp  sandbox.hpp  sm2_algorithm.hpp  stream_filter.hpp  tui_app.hpp  tui_views.hpp  types.hpp  version.hpp  xml_parser.hpp
include/shuati/adapters/: base_crawler.hpp  codeforces_crawler.hpp  companion_server.hpp  lanqiao_crawler.hpp  leetcode_crawler.hpp  luogu_crawler.hpp  matiji_crawler.hpp
include/shuati/utils/: encoding.hpp  project_utils.hpp  string_utils.hpp
installer/: README.md  build-installer.ps1  create-icon.ps1  shuati.iss
resources/rules/: compiler_errors.json
scripts/: benchmark_tui.ps1  check_version.py  run_tui_regression.ps1
src/: main.cpp
src/adapters/: ai_coach.cpp  codeforces_crawler.cpp  companion_server.cpp  lanqiao_crawler.cpp  leetcode_crawler.cpp  luogu_crawler.cpp  matiji_crawler.cpp
src/algorithms/: sm2_algorithm.cpp
src/cli/: legacy_repl.cpp  legacy_repl.hpp
src/cmd/: basic_commands.cpp  commands.cpp  commands.hpp  list_command.cpp  main.cpp  manage_commands.cpp  services.cpp  solve_command.cpp  test_command.cpp  update_command.cpp  view_command.cpp
src/core/: boot_guard.cpp  compiler_doctor.cpp  database.cpp  judge.cpp  memory_manager.cpp  mistake_analyzer.cpp  problem_manager.cpp  sm2_algorithm.cpp  version.cpp
src/core/sandbox/: sandbox_linux.cpp  sandbox_windows.cpp
src/infra/: database.cpp  http_client.cpp  logger.cpp
src/router/: app_router.cpp  app_router.hpp
src/tests/: mock_http_client.hpp  test_crawler_lanqiao.cpp  test_crawler_matiji.cpp  test_crawlers.cpp  test_judge_complex.cpp  test_judge_security.cpp  test_memory.cpp  test_sm2_auto_quality.cpp  test_tui_cli_parity.cpp  test_tui_command_specs.cpp  test_tui_menu_flow.cpp  test_tui_performance.cpp  test_tui_render.cpp  test_version_logic.cpp
src/tui/: command_specs.cpp  command_specs.hpp  root_component.cpp  root_component.hpp  tui_app.cpp  tui_command_catalog.cpp  tui_command_engine.cpp  tui_command_engine.hpp  tui_menu_model.cpp  tui_menu_model.hpp  tui_views.cpp
src/tui/components/: dialogs.cpp  dialogs.hpp
src/tui/pages/: page_components.cpp  problem_list_page.cpp  solve_workspace_page.cpp
src/tui/store/: app_state.cpp  app_state.hpp
src/tui/views/: all_views.hpp  common_widgets.cpp  common_widgets.hpp  config_status_view.cpp  data_loaders.cpp  hint_test_view.cpp  list_solve_view.cpp  main_view.cpp  pull_menu_dashboard_view.cpp  view_base.hpp
src/tui/worker/: task_runner.cpp  task_runner.hpp
src/utils/: encoding.cpp  project_utils.cpp
test_run_3/: local_1770709999.md  solution_local_1770709999.cpp
tools/: check_branches.py  lanqiao_scraper.py  test_lanqiao_scraper.py
tools/release/: __init__.py  plan_release.py  update_versions.py  verify_release_logic.py
tools/testing/: generate_crawler_test_dataset.py  mock_matiji_server.py
tools/testing/datasets/: crawler_fixture_matiji.json
